# Monorepo

./: .gitignore  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_NEEDED.md  DEPLOYMENT_STATUS.md  DEPLOY_NOW.md  FRONTEGG_REDIRECT_FIX.md  UPLOAD_FIX_SUMMARY.md  deploy-backend-fix.sh  deploy.sh  docker-compose.yml  extract-ragie-debug.sh  package.json  pnpm-lock.yaml  turbo.json  update-openai-key.sh
apps/backend/: .env.example  .env.local.backup  BACKEND_AUTH_SETUP.md  Dockerfile  db_env_test.py  kill_backend.sh  pyproject.toml  pytest.ini  requirements.txt  start_backend.py  test_chat_endpoint.sh
apps/backend/.cursor/rules/: backend-development-rules.mdc  ragie-backend.mdc  tdd.mdc
apps/backend/docs/: DEBUGGING_PRODUCTION.md  README.md
apps/backend/docs/authentication/: TOKEN_CACHING_STRATEGY.md  cleanup-summary.md  frontegg-implementation-guide.md  simplification-plan.md
apps/backend/docs/feature_requests/: ragie-frontend-integration-requirements.md
apps/backend/docs/handoff/: auto-provisioning-implementation.md  bug-fixes-summary.md  chat-api-endpoints.md  ragie-api-endpoints.md
apps/backend/docs/simplification/: CLEANUP_COMPLETE.md  ragie-service-simplification.md
apps/backend/docs/testing/: AUTHENTICATION_TEST_SUITE_SUMMARY.md  BACKEND_SETTINGS_TEST_SUITE_SUMMARY.md
apps/backend/src/: __init__.py  main.py  main_simple.py
apps/backend/src/adapters/: __init__.py  ragie_client.py
apps/backend/src/api/: __init__.py  chat.py  file.py  organization.py  ragie.py  ragie_extensions.py  user.py
apps/backend/src/auth/: __init__.py  frontegg_auth.py  frontegg_sdk_auth.py  provisioning_auth.py  token_cache.py
apps/backend/src/models/: __init__.py  chat.py  file.py  organization.py  ragie.py  user.py
apps/backend/src/services/: __init__.py  chat_service.py  llm_service.py  ragie_service.py  redis_service.py  s3_service.py  user_provisioning_service.py
apps/backend/tests/: CHAT_TESTS_SUMMARY.md  README.md  __init__.py  conftest.py  run_tests.py  test_auth_sdk.py  test_s3_ragie_integration.py
apps/backend/tests/api/: test_chat_api.py  test_ragie_routes.py
apps/backend/tests/openAPI/: ragie.json
apps/backend/tests/unit/: conftest.py  test_chat_service.py  test_llm_service.py
apps/backend/tests/unit/adapters/: test_ragie_client.py
apps/backend/tests/unit/services/: test_ragie_service.py
apps/document-processor/: .env.example  README.md  README_UNIFIED.md  pyproject.toml  requirements.txt  test_basic_db.py  test_db_integration.py
apps/document-processor/.cursor/rules/: document-processor-development-rules.mdc
apps/document-processor/src/: main.py  main_with_db.py
apps/document-processor/src/embeddings/: __init__.py  embedding_service.py  providers.py
apps/document-processor/src/processors/: __init__.py  base_processor.py  docling_chunker.py  docling_processor.py  gpt4o_visual_parser.py  unified_document_processor.py
apps/document-processor/src/rag/: __init__.py  rag_service.py  search_service.py  vector_store.py
apps/document-processor/src/workers/: __init__.py  database_ingestion_worker.py  docling_document_worker.py  ingestion_worker.py  unified_document_worker.py
apps/document-processor/tests/: README.md  conftest.py  delete_collection.py  full_ingest.py  ingest_for_manual_testing.py  interactive_rag_test.py  manual_rag_tests.py  quick_ingest.py  run_manual_rag.py  test_document_processing.py  test_rag_simple.py  test_system_health.py
docs/: DEBUGGING_BACKEND.md  Implementation Plan_ AI Knowledge Agent MVP.md  LOCAL_DEVELOPMENT.md  deployment-guide.md  github-secrets-setup.md
infra/: README.md  main.tf  outputs.tf  terraform.tf  variables.tf
testing/: QA_ENHANCEMENT_SUMMARY.md  README.md  SETUP_COMPLETE.md  (+8 more)
(+154 files in other folders)
