[project]
name = "backend"
version = "0.1.0"
description = "FastAPI backend for AI Knowledge Agent"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "boto3>=1.34.0",
    "botocore>=1.34.0",
    "shared-database @ file:///Users/gauthamgsabahit/workspace/convinced/Monorepo/packages/database",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
