[project]
name = "backend"
version = "0.1.0"
description = "FastAPI backend for AI Knowledge Agent"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "boto3>=1.34.0",
    "botocore>=1.34.0",
    "shared-database @ file:///Users/gauthamgsabahit/workspace/convinced/Monorepo/packages/database",
    "greenlet>=3.2.4",
    "redis>=5.0.0",
    "httpx>=0.25.0",
    "pydantic>=2.5.0",
    "pyjwt[crypto]>=2.8.0",
    "cryptography>=41.0.0",
    "frontegg>=3.0.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "httpx>=0.25.0",
    "freezegun>=1.2.0",
    "factory-boy>=3.2.0",
    "faker>=18.0.0",
    "respx>=0.20.0",
]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "httpx>=0.25.0",
    "freezegun>=1.2.0",
    "factory-boy>=3.2.0",
    "faker>=18.0.0",
    "respx>=0.20.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
